I changed font-family in body

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <meta charset = 'utf-8'>
     <title>drinks</title>
   <style>
+    body{
+    	font-family: verdana, helvetica, sans-serif;
+    }
     .info{
     	border: 1px solid red;
     	width: 960px;
